@@ -1,0 +1,28 @@
+<!DOCTYPE html>
+
+<html>
+<head>
+<meta charset="utf-8">
+<script src="options.js"></script>
+</head>
+
+<body>
+<div>Classes
+  <dl>
+    <dt><label for="element-class">Resulted elements</label></dt>
+    <dd><input type="text" id="element-class"></dd>
+    <dt><label for="context-class">Context element</label></dt>
+    <dd><input type="text" id="context-class"></dd>
+    <dt><label for="focused-class">Focused element</label></dt>
+    <dd><input type="text" id="focused-class"></dd>
+    <dt><label for="ancestor-class">Ancestors of the focused element</label></dt>
+    <dd><input type="text" id="ancestor-class"></dd>
+  </dl>
+</div>
+<div>
+  <dl>
+    <dt><label for="style">Style</label></dt>
+    <dd><textarea id="style"></textarea></dd>
+</div>
+</body>
+</html>
