@@ -1,0 +1,8 @@
+
+(function (window, undefined) {
+    "use strict";
+
+    var document = window.document;
+
+
+})(window);
