@@ -1,5 +1,11 @@
 2017-09-23  larissa9839  <larissa9839@gmail.com>
 
+	* tryXpath/pages/options.html:
+	Create this file.
+
+	* tryXpath/pages/options.js:
+	Create this file.
+
 	* tryXpath/scripts/try_xpath_content.js:
 	Define classes variable.
 	Remove variables. elemClass, contextClass, focusedClass,
